clase: modelo de caja

--- a/conceptos_css/styles.html
+++ b/conceptos_css/styles.html
@@ -10,8 +10,10 @@
   <body>
     <header></header>
     <main>
-      <p>hola mundo feliz</p>
-      <p>hola mundo</p>
+      <p>conejo </p>
+      <p>🐶 perro </p>
+      <p>🐄 vaca</p>
+      <p>🐸 sapo</p>
     </main>
     <footer></footer>
   </body>
