--- a/conceptos_css/modelo_de_caja.html
+++ b/conceptos_css/modelo_de_caja.html
@@ -8,7 +8,7 @@
     <title>modelo de caja </title>
   </head>
   <body> 
-    <header> </header>
+    <header><img src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="logo de platzi.com"></header>
     <main> 
       <div class="caja"></div>
       <div class="caja2"></div>
