log in and sign up pages done

--- a/componentes_css/html/iniciar-sesion.html
+++ b/componentes_css/html/iniciar-sesion.html
@@ -27,8 +27,8 @@
             </div>
           </form>
           <section class="login__container--social-media"> 
-            <div> <img src="../imagenes/logo-google.jpeg" alt="Google"/><a href="/"> </a>Iniciar Sesión con Google </div>
-            <div> <img src="../imagenes/logo-twitter.png" alt="Twitter"/><a href=""></a>Iniciar Sesión con Twitter</div>
+            <div> <img src="../imagenes/logo-google.jpeg" alt="Google"/>Iniciar Sesión con Google </div>
+            <div> <img src="../imagenes/logo-twitter.png" alt="Twitter"/>Iniciar Sesión con Twitter</div>
           </section>
           <p class="login__container--register">No tienes ninguna cuenta <a href="/">Regístrate </a></p>
         </section>
