maquetacion principal empezado

--- a/componentes_css/html/maquetacion-principal.html
+++ b/componentes_css/html/maquetacion-principal.html
@@ -2,31 +2,22 @@
 <html lang="es">
   <head>  
     <meta charset="utf-8"/>
-    <meta name="description" content="no sé jaja"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="../css/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;400;500;700&amp;display=swap" rel="stylesheet"/>
-    <title>componentes </title>
+    <meta name="description" content="Chequense estos videoos"/>
+    <link rel="stylesheet" href="../css/style-maquetacion-principal.css"/>
+    <title>Platzi Video</title>
   </head>
   <body> 
-    <header class="header"> <img class="header__img" src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="logo de platzi.com"/>
-      <div class="header__menu">
-        <div class="header__menu--perfil"> <img src="../imagenes/user-icon.png" alt="profile button"/>
-          <p>Perfil</p>
-        </div>
-        <ul> 
-          <li><a href="#">Cuenta</a></li>
-          <li><a href="#">Cerrar Sesión</a></li>
-        </ul>
-      </div>
-    </header>
-    <main> 
+    <header class="header"> <img class="header__img" src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="logo de platzi.com"/></header>
+    <main>
       <section class="main"> 
         <h2 class="main__title">¿Qué quieres ver hoy?</h2>
         <input class="input" type="text" placeholder="Buscar..."/>
       </section>
+      <h2 class="categories__title">Mi lista</h2>
       <section class="carousel">
         <div class="carousel__container"> 
           <div class="carousel-item"><img class="carousel-item__img" src="https://images.pexels.com/photos/3404474/pexels-photo-3404474.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=750&amp;w=1260" alt="people"/>
@@ -36,10 +27,9 @@
               <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
             </div>
           </div>
-          <div class="carousel-item"></div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer><a href="/">Términos de uso</a><a href="/">Declaración de privacidad</a><a href="/">Centro de ayuda</a></footer>
   </body>
 </html>
