algunas modificaciones para la clase num. 24

--- a/componentes_css/html/maquetacion-principal.html
+++ b/componentes_css/html/maquetacion-principal.html
@@ -27,6 +27,69 @@
               <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
             </div>
           </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Título Descriptivo</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
