--- a/componentes_css/html/maquetacion-principal.html
+++ b/componentes_css/html/maquetacion-principal.html
@@ -92,6 +92,156 @@
           </div>
         </div>
       </section>
+      <h2 class="categories__title">Tendencia</h2>
+      <section class="carousel">
+        <div class="carousel__container"> 
+          <div class="carousel-item"><img class="carousel-item__img" src="https://images.pexels.com/photos/3404474/pexels-photo-3404474.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=750&amp;w=1260" alt="people"/>
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Título Descriptivo</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Título Descriptivo</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <h2 class="categories__title">Originales de PlatziVideo</h2>
+      <section class="carousel">
+        <div class="carousel__container"> 
+          <div class="carousel-item"><img class="carousel-item__img" src="https://images.pexels.com/photos/3404474/pexels-photo-3404474.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=750&amp;w=1260" alt="people"/>
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Título Descriptivo</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Título Descriptivo</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item__details">
+              <div><img src="/imagenes/play-icon.png" alt="play"/><img src="/imagenes/plus-icon.png" alt="pause"/></div>
+              <p class="carousel-item__details--title">Description</p>
+              <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer><a href="/">Términos de uso</a><a href="/">Declaración de privacidad</a><a href="/">Centro de ayuda</a></footer>
   </body>
