--- a/componentes_css/html/iniciar-sesion.html
+++ b/componentes_css/html/iniciar-sesion.html
@@ -11,13 +11,13 @@
     <title>Iniciar Sesión </title>
   </head>
   <body> 
-    <header class="header"> <img class="header__img" src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="logo de platzi.com"/></header>
+    <header class="header"> <img class="header__img" tabindex="0" src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="logo de platzi.com"/></header>
     <main>
       <section class="login"> 
         <section class="login__container">   
-          <h2>Iniciar Sesión</h2>
+          <h2 tabindex="0">Iniciar Sesión</h2>
           <form class="login__container--form">
-            <input class="input" type="text" placeholder="correo"/>
+            <input class="input" aria-label="correo" type="text" placeholder="correo"/>
             <input class="input" type="password" placeholder="contraseña"/>
             <button class="button">Iniciar Sesión</button>
             <div class="login__container--remember-me">
