--- a/componentes_css/html/maquetacion-principal.html
+++ b/componentes_css/html/maquetacion-principal.html
@@ -11,7 +11,7 @@
     <title>Platzi Video</title>
   </head>
   <body> 
-    <header class="header"> <img class="header__img" src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="logo de platzi.com"/></header>
+    <header class="header"> <img class="header__img" tabindex="0" src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="logo de platzi.com"/></header>
     <main>
       <section class="main"> 
         <h2 class="main__title">¿Qué quieres ver hoy?</h2>
