--- a/componentes_css/html/404.html
+++ b/componentes_css/html/404.html
@@ -11,11 +11,11 @@
     <title>Page not Found</title>
   </head>
   <body> 
-    <header class="header"> <img class="header__img" src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="logo de platzi.com"/></header>
-    <main> 
+    <header class="header"> <img class="header__img" tabindex="0" src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="logo de platzi.com"/></header>
+    <main class="main"> 
       <div class="message">
-        <h1 class="notfound animated">404</h1>
-        <p class="text"></p>
+        <h1 class="animated pulse">404</h1>
+        <p>Página no encontrada</p>
       </div>
     </main>
     <footer><a href="/">Términos de uso</a><a href="/">Declaración de privacidad</a><a href="/">Centro de ayuda</a></footer>
